fixed sponsors layout, changed text-align

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -315,8 +315,15 @@ section#sponsors {
     padding-bottom: 0;
     margin-bottom: 1rem;
   }
-  .wrapper.even {
-    margin-top: 2rem;
+  @media #{$medium-up} {
+    .medium-up {
+      margin-top: -2rem;
+    }
+  }
+  @media #{$small-only} {
+      .small-up {
+        margin-top: -2rem;
+      }
   }
   .wrapper {
     div.box {
